--- a/Skills.html
+++ b/Skills.html
@@ -21,10 +21,18 @@
         <div class="Skills" id="Skills">
             <h2>Skills</h2>
             <ul>
+                <li>C</li>
+                <li>C++</li>
                 <li>Python</li>
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
+                <li>React.js</li>
+                <li>MongoDB</li>
+                <li>MySQL</li>
+                <li>Express.js</li>
+                <li>Node.js</li>
+                <li>npm</li>
             </ul>
 
             <style>
